--- a/sicupira/templates/sicupira/turma_detail.html
+++ b/sicupira/templates/sicupira/turma_detail.html
@@ -5,13 +5,14 @@
 {% endblock %}
 
 {% block content %}
-{% load static %} 
+{% load static %}
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Turma</h3>
     <h4>Nome: {{ turma.nome_turma }}</h4>
-    Curso: {{ turma.curso_id }}<br/>    
-    Disciplina: {{ turma.disciplina_id.nome_disciplina }}<br/>    
-    Ano: {{ turma.ano }}<br/>    
-    Periodo Letivo: {{ turma.periodo_letivo_id }}<br/>    
+    Curso: {{ turma.curso_id }}<br/>
+    Créditos: {{ turma.disciplina_id.creditos }}</br>
+    Disciplina: {{ turma.disciplina_id.nome_disciplina }}<br/>
+    Ano: {{ turma.ano }}<br/>
+    Periodo Letivo: {{ turma.periodo_letivo_id }}<br/>
     
 {% endblock %}
