--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -66,8 +66,8 @@ const urlParams = new URLSearchParams(queryString);
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Pessoas
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Docentes</a></li>
-            <li><a href="#">Discentes</a></li>            
+            <li><a href="/docente">Docentes</a></li>
+            <li><a href="/discente">Discentes</a></li>
           </ul>
         </li>
         <li class="active"><a href="/importaxml">Lattes</a></li>
