--- a/sicupira/templates/pessoa/discente_confirm_delete.html
+++ b/sicupira/templates/pessoa/discente_confirm_delete.html
@@ -1,5 +1,9 @@
 {% extends 'sicupira/base.html' %}
 
+{% block breadcrumbs %}
+    {{ block.super }} » <a href="{% url 'discente_delete' docente.id %}">Apagar Discente</a>
+{% endblock %}
+
 {% block content %}
 {% load static %} 
 
