--- a/sicupira/templates/pessoa/discente_list.html
+++ b/sicupira/templates/pessoa/discente_list.html
@@ -15,38 +15,38 @@
         <h4>Filtro</h2>
         <form action="/discente" method="get">
             <div class="form-group">
-                <label for="nome_pessoa">Nome:</label>
-                <input type="input" class="form-control" id="nome_pessoa" name="nome_pessoa" value="" list="nome_pessoa">                
-                <datalist id="lista_nome_pessoa">
+                <label for="nome">Nome:</label>
+                <input type="input" class="form-control" id="nome" name="nome" value="" list="lista_nome">                
+                <datalist id="lista_nome">
                     {% for discente in page_obj %}
-                        <option value="{{ discente.nome_pessoa }}"></option>
+                        <option value="{{ discente.pessoa.nome }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="sexo_id">Sexo:</label>
-                <input type="input" class="form-control" id="sexo_id" name="sexo_id" value="" list="lista_sexo_id">                
-                <datalist id="lista_sexo_id">
-                    {% for sexo in page_obj %}
-                        <option value="{{ sexo.desc_sexo }}"></option>
+                <label for="sexo">Sexo:</label>
+                <input type="input" class="form-control" id="sexo" name="sexo" value="" list="lista_sexo">                
+                <datalist id="lista_sexo">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.pessoa.sexo.desc_sexo }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="curso_id">Curso:</label>
-                <input type="input" class="form-control" id="curso_id" name="curso_id" value="" list="lista_curso_id">                
-                <datalist id="lista_curso_id">
-                    {% for curso in page_obj %}
-                        <option value="{{ curso.nome_curso }}"></option>
+                <label for="curso">Curso:</label>
+                <input type="input" class="form-control" id="curso" name="curso" value="" list="lista_curso">                
+                <datalist id="lista_curso">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.curso.nome_curso }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="titulo_nivel_id">Graduação:</label>
-                <input type="input" class="form-control" id="titulo_nivel_id" name="titulo_nivel_id" value="" list="lista_titulo_nivel_id">                
-                <datalist id="lista_titulo_nivel_id">
-                    {% for nivelgraduacao in page_obj %}
-                        <option value="{{ nivelgraduacao.desc_nivel_graduacao }}"></option>
+                <label for="nivel">Graduação:</label>
+                <input type="input" class="form-control" id="nivel" name="nivel" value="" list="lista_nivel">                
+                <datalist id="lista_nivel">
+                    {% for discente in page_obj %}
+                        <option value="{{ discente.nivel.desc_nivel_graduacao }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
@@ -56,10 +56,10 @@
     </div>
     <script>
         // Script para manipular via DOM as buscas
-        document.getElementById('nome_pessoa').value = urlParams.get('nome_pessoa')      
-        document.getElementById('sexo_id').value = urlParams.get('sexo_id')
-        document.getElementById('curso_id').value = urlParams.get('curso_id')
-        document.getElementById('titulo_nivel_id').value = urlParams.get('titulo_nivel_id')        
+        document.getElementById('nome').value = urlParams.get('nome')      
+        document.getElementById('sexo').value = urlParams.get('sexo')
+        document.getElementById('curso').value = urlParams.get('curso')
+        document.getElementById('nivel').value = urlParams.get('nivel')        
         
         //Reseta formulario. Troque pela url correta
         function Reset() {
@@ -91,20 +91,20 @@
         <tbody>
             {% for discente in page_obj %}
             <tr>
-            <td>{{ discente.nome_pessoa }}</td>
-            <td>{{ discente.sexo_id.desc_sexo }}</td>
-            <td>{{ discente.data_nascimento }}</td>
-            <td>{{ discente.numero_documento }}</td>
-            <td>{{ discente.tipo_documento_id.desc_tipo_doc }}</td>
-            <td>{{ discente.email }}</td>
-            <td>{{ discente.nacionalidade.nome_pais }}</td>
-            <td>{{ discente.titulo_nivel_id.desc_nivel_graduacao }}</td>
-            <td>{{ discente.curso_id.nome_curso }}</td>
-            <td>{{ discente.situacao_id.desc_situacao_matricula }}</td>
+            <td>{{ discente.pessoa.nome }}</td>
+            <td>{{ discente.pessoa.sexo.desc_sexo }}</td>
+            <td>{{ discente.pessoa.data_nascimento }}</td>
+            <td>{{ discente.pessoa.numero_documento }}</td>
+            <td>{{ discente.pessoa.tipo_documento.desc_tipo_doc }}</td>
+            <td>{{ discente.pessoa.email }}</td>
+            <td>{{ discente.pessoa.nacionalidade.nome_pais }}</td>
+            <td>{{ discente.nivel.desc_nivel_graduacao }}</td>
+            <td>{{ discente.curso.nome_curso }}</td>
+            <td>{{ discente.situacao.desc_situacao_matricula }}</td>
             <td>{{ discente.data_situacao }}</td>
-            <td><a href="{% url "discente_view" discente.id %}"><span class="label label-info">ver</span></a></td>
-            <td><a href="{% url "discente_edit" discente.id %}"><span class="label label-warning">alterar</span></a></td>
-            <td><a href="{% url "discente_delete" discente.id %}"><span class="label label-danger">apagar</span></a></td>
+            <td><a href="{% url "discente_view" discente.pessoa.id %}"><span class="label label-info">ver</span></a></td>
+            <td><a href="{% url "discente_edit" discente.pessoa.id %}"><span class="label label-warning">alterar</span></a></td>
+            <td><a href="{% url "discente_delete" discente.pessoa.id %}"><span class="label label-danger">apagar</span></a></td>
             </tr>
             {% endfor %}
         </tbody>
