--- a/sicupira/templates/sicupira/base.html
+++ b/sicupira/templates/sicupira/base.html
@@ -49,7 +49,7 @@ const urlParams = new URLSearchParams(queryString);
         <a class="navbar-brand" href="#">Sicupira</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">Inicio</a></li>
+        <li class="active"><a href="/index">Inicio</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">Programa
           <span class="caret"></span></a>
