--- a/sicupira/templates/pessoa/docente_confirm_delete.html
+++ b/sicupira/templates/pessoa/docente_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-    {{ block.super }} » <a href="{% url 'docente_delete' docente.id %}">Apagar Docente</a>
+    {{ block.super }} » <a href="{% url 'docente_delete' docente.pessoa.id %}">Apagar Docente</a>
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
 
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Docente</h3>
     <form method="post">{% csrf_token %}
-        Voce realmente quer apagar "{{ docente.nome_pessoa }}" ?<br/>
+        Voce realmente quer apagar "{{ docente.pessoa.nome }}" ?<br/>
         <input type="submit" value="Apagar" class="btn btn-danger" />
     </form>
 
