--- a/sicupira/templates/pessoa/docente_list.html
+++ b/sicupira/templates/pessoa/docente_list.html
@@ -13,40 +13,40 @@
 
     <div class="container">
         <h4>Filtro</h2>
-        <form action="/discente" method="get">
+        <form action="/docente" method="get">
             <div class="form-group">
-                <label for="nome_pessoa">Nome:</label>
-                <input type="input" class="form-control" id="nome_pessoa" name="nome_pessoa" value="" list="nome_pessoa">                
-                <datalist id="lista_nome_pessoa">
+                <label for="nome">Nome:</label>
+                <input type="input" class="form-control" id="nome" name="nome" value="" list="lista_nome">                
+                <datalist id="lista_nome">
                     {% for docente in page_obj %}
-                        <option value="{{ docente.nome_pessoa }}"></option>
+                        <option value="{{ docente.pessoa.nome }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="sexo_id">Sexo:</label>
-                <input type="input" class="form-control" id="sexo_id" name="sexo_id" value="" list="lista_sexo_id">                
-                <datalist id="lista_sexo_id">
-                    {% for sexo in page_obj %}
-                        <option value="{{ sexo.desc_sexo }}"></option>
+                <label for="sexo">Sexo:</label>
+                <input type="input" class="form-control" id="sexo" name="sexo" value="" list="lista_sexo">                
+                <datalist id="lista_sexo">
+                    {% for docente in page_obj %}
+                        <option value="{{ docente.sexo.desc_sexo }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="titulo_nivel_id">Graduação:</label>
-                <input type="input" class="form-control" id="titulo_nivel_id" name="titulo_nivel_id" value="" list="lista_titulo_nivel_id">                
-                <datalist id="lista_titulo_nivel_id">
-                    {% for nivelgraduacao in page_obj %}
-                        <option value="{{ nivelgraduacao.desc_nivel_graduacao }}"></option>
+                <label for="titulo_nivel">Graduação:</label>
+                <input type="input" class="form-control" id="titulo_nivel" name="titulo_nivel" value="" list="lista_titulo_nivel">                
+                <datalist id="lista_titulo_nivel">
+                    {% for docente in page_obj %}
+                        <option value="{{ docente.titulo_nivel.desc_nivel_graduacao }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="vinculo_IES">Intituição de Ensino:</label>
-                <input type="input" class="form-control" id="vinculo_IES" name="vinculo_IES" value="" list="lista_vinculo_IES">                
-                <datalist id="lista_vinculo_IES">
-                    {% for VincluloIES in page_obj %}
-                        <option value="{{ VincluloIES.desc_vinclulo_ies }}"></option>
+                <label for="vinculo_ies">Intituição de Ensino:</label>
+                <input type="input" class="form-control" id="vinculo_ies" name="vinculo_ies" value="" list="lista_vinculo_ies">                
+                <datalist id="lista_vinculo_ies">
+                    {% for docente in page_obj %}
+                        <option value="{{ docente.vinculo_ies.desc_vinclulo_ies }}"></option>
                     {% endfor %}
                 </datalist>
             </div>
@@ -56,10 +56,10 @@
     </div>
     <script>
         // Script para manipular via DOM as buscas
-        document.getElementById('nome_pessoa').value = urlParams.get('nome_pessoa')      
-        document.getElementById('sexo_id').value = urlParams.get('sexo_id')
-        document.getElementById('titulo_nivel_id').value = urlParams.get('titulo_nivel_id')        
-        document.getElementById('vinculo_IES').value = urlParams.get('vinculo_IES')
+        document.getElementById('nome').value = urlParams.get('nome')      
+        document.getElementById('sexo').value = urlParams.get('sexo')
+        document.getElementById('titulo_nivel').value = urlParams.get('titulo_nivel')        
+        document.getElementById('vinculo_ies').value = urlParams.get('vinculo_ies')
         
         //Reseta formulario. Troque pela url correta
         function Reset() {
@@ -95,23 +95,22 @@
         <tbody>
             {% for docente in page_obj %}
             <tr>
-            <td>{{ docente.nome_pessoa }}</td>
-            <td>{{ docente.sexo_id.desc_sexo }}</td>
-            <td>{{ docente.data_nascimento }}</td>
-            <td>{{ docente.numero_documento }}</td>
-            <td>{{ docente.tipo_documento_id.desc_tipo_doc }}</td>
-            <td>{{ docente.email }}</td>
-            <td>{{ docente.nacionalidade.nome_pais }}</td>
-            <td>{{ docente.titulo_nivel_id.desc_nivel_graduacao }}</td>
-
+            <td>{{ docente.pessoa.nome }}</td>
+            <td>{{ docente.pessoa.sexo.desc_sexo }}</td>
+            <td>{{ docente.pessoa.data_nascimento }}</td>
+            <td>{{ docente.pessoa.numero_documento }}</td>
+            <td>{{ docente.pessoa.tipo_documento.desc_tipo_doc }}</td>
+            <td>{{ docente.pessoa.email }}</td>
+            <td>{{ docente.pessoa.nacionalidade.nome_pais }}</td>
+            <td>{{ docente.titulo_nivel.desc_nivel_graduacao }}</td>
             <td>{{ docente.data_titulacao }}</td>
-            <td>{{ docente.area_conhecimento }}</td>
+            <td></td>
             <td>{{ docente.titulo_pais_id.nome_pais }}</td>
-            <td>{{ docente.regime_trabalho_id.desc_regime_trabalho }}</td>
-            <td>{{ docente.vinculo_IES.desc_vinclulo_ies }}</td>
-            <td><a href="{% url "docente_view" docente.id %}"><span class="label label-info">ver</span></a></td>
-            <td><a href="{% url "docente_edit" docente.id %}"><span class="label label-warning">alterar</span></a></td>
-            <td><a href="{% url "docente_delete" docente.id %}"><span class="label label-danger">apagar</span></a></td>
+            <td>{{ docente.regime_trabalho.desc_regime_trabalho }}</td>
+            <td>{{ docente.vinculo_ies.desc_vinclulo_ies }}</td>
+            <td><a href="{% url "docente_view" docente.pessoa.id %}"><span class="label label-info">ver</span></a></td>
+            <td><a href="{% url "docente_edit" docente.pessoa.id %}"><span class="label label-warning">alterar</span></a></td>
+            <td><a href="{% url "docente_delete" docente.pessoa.id %}"><span class="label label-danger">apagar</span></a></td>
             </tr>
             {% endfor %}
         </tbody>
