cadastro de docento completo + ajustes de layout e controles comuns para facilitar o trabalho

--- a/sicupira/templates/pessoa/discente_detail.html
+++ b/sicupira/templates/pessoa/discente_detail.html
@@ -15,4 +15,6 @@
     Número documento: {{ discente.pessoa.numero_documento }}<br/>    
     Curso: {{ discente.curso.nome_curso }}<br/>    
     Graduação: {{ discente.nivel.desc_nivel_graduacao }}<br/>    
+ <br/>
+ {% include 'common/back_button.html' %}
 {% endblock %}
