--- a/sicupira/templates/pessoa/discente_confirm_delete.html
+++ b/sicupira/templates/pessoa/discente_confirm_delete.html
@@ -9,8 +9,9 @@
 
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Discente</h3>
     <form method="post">{% csrf_token %}
-        Voce realmente quer apagar "{{ discente.pessoa.nome }}" ?<br/>
-        <input type="submit" value="Apagar" class="btn btn-danger" />
+        Voce realmente quer apagar "{{ discente.pessoa.nome }}" ?
+        <br/>
+        {% include 'common/delete_button.html' %}
     </form>
 
 {% endblock %}
