--- a/sicupira/templates/pessoa/docente_detail.html
+++ b/sicupira/templates/pessoa/docente_detail.html
@@ -9,8 +9,13 @@
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes do Docente</h3>
     <h4>Nome: {{docente.pessoa.nome}}</h4>
-    Sexo: {{ docente.pessoa.sexo.desc_sexo }}<br/>    
-    Graduação: {{ docente.pessoa.titulo_nivel.desc_nivel_graduacao }}<br/>    
-    Intituição de Ensino: {{ docente.pessoa.vinculo_ies.desc_vinculo_ies }}<br/>    
-
+    Sexo: {{ docente.pessoa.sexo.desc_sexo }}<br/>
+    Email: {{ docente.pessoa.email }}<br/>
+    Tipo documento: {{ docente.pessoa.tipo_documento.desc_tipo_doc }}<br/>
+    Número documento: {{ docente.pessoa.numero_documento }}<br/>
+    Título: {{ docente.titulo_nivel.desc_nivel_graduacao }}<br/>
+    Vínculo IES : {{ docente.vinculo_ies.desc_vinculo_ies }}<br/>
+ <br/>
+ <br/>
+ {% include 'common/back_button.html' %}
 {% endblock %}
