adição de butões e ajuste busca docente

--- a/sicupira/templates/sicupira/curso_detail.html
+++ b/sicupira/templates/sicupira/curso_detail.html
@@ -17,5 +17,7 @@
     Trabalho de conclusão:  {{curso.trabalho_conclusao}}<br/>
     Outros: {{curso.outros}}<br/>
     Equivalência hora: {{curso.equivalencia_hora}}<br/>    
-    
+    <br/>
+    <br/>
+    {% include 'common/back_button.html' %}
 {% endblock %}
