--- a/sicupira/templates/sicupira/disciplina_detail.html
+++ b/sicupira/templates/sicupira/disciplina_detail.html
@@ -14,5 +14,7 @@
     Créditos: {{ disciplina.creditos }}<br/>    
     Ementa: {{ disciplina.ementa }}<br/>    
     Bibliografia: {{ disciplina.bibliografia }}<br/>    
-    
+    <br/>
+    <br/>
+    {% include 'common/back_button.html' %}
 {% endblock %}
