--- a/sicupira/templates/sicupira/enderecoprograma_detail.html
+++ b/sicupira/templates/sicupira/enderecoprograma_detail.html
@@ -30,7 +30,9 @@
     Fim:  {{ enderecoprograma.fim }}<br/>
     Latitude:  {{ enderecoprograma.latitude }}<br/>
     Longitude:  {{ enderecoprograma.longitude }}<br/>
-
+    <br/>
+    <br/>
+    {% include 'common/back_button.html' %}
 {% endblock %}
 
 
