--- a/sicupira/templates/sicupira/enderecoprograma_form.html
+++ b/sicupira/templates/sicupira/enderecoprograma_form.html
@@ -133,7 +133,7 @@
     </div>
     <div class="form-row">
       <div class="form-group">
-        <input type="submit" value="Salvar" class="btn btn-primary" />  
+        {% include 'common/form_button.html' %}
       </div>
     </div>
     
