--- a/sicupira/templates/sicupira/linhapesquisa_detail.html
+++ b/sicupira/templates/sicupira/linhapesquisa_detail.html
@@ -14,5 +14,7 @@
     Área de Concentração: {{ linhapesquisa.area_concentracao_id }}<br/>    
     Data de Início: {{ linhapesquisa.data_inicio }}<br/> 
     Data de Fim: {{ linhapesquisa.data_fim }}<br/>
-
+    <br/>
+    <br/>
+    {% include 'common/back_button.html' %}
 {% endblock %}
