--- a/sicupira/templates/sicupira/programa_detail.html
+++ b/sicupira/templates/sicupira/programa_detail.html
@@ -23,5 +23,7 @@
     Região: {{ programa.regiao_id }}<br/>    
     Situação: {{ programa.situacao_id }}<br/>    
     Linha de Pesquisa: {{ programa.linha_pesquisa_id }}<br/>    
-        
+    <br/>
+    <br/>
+    {% include 'common/back_button.html' %}      
 {% endblock %}
