--- a/sicupira/templates/sicupira/turma_detail.html
+++ b/sicupira/templates/sicupira/turma_detail.html
@@ -14,5 +14,7 @@
     Disciplina: {{ turma.disciplina_id.nome_disciplina }}<br/>
     Ano: {{ turma.ano }}<br/>
     Periodo Letivo: {{ turma.periodo_letivo_id }}<br/>
-    
+    <br/>
+    <br/>
+    {% include 'common/back_button.html' %}
 {% endblock %}
