--- a/sicupira/templates/pessoa/docente_list.html
+++ b/sicupira/templates/pessoa/docente_list.html
@@ -42,7 +42,7 @@
                 </datalist>
             </div>
             <div class="form-group">
-                <label for="vinculo_ies">Intituição de Ensino:</label>
+                <label for="vinculo_ies">Vinculo IES:</label>
                 <input type="input" class="form-control" id="vinculo_ies" name="vinculo_ies" value="" list="lista_vinculo_ies">                
                 <datalist id="lista_vinculo_ies">
                     {% for docente in page_obj %}
@@ -82,10 +82,9 @@
                 <th>Graduação</th>
 
                 <th>Data titulação</th>
-                <th>Área de conhecimento</th>
                 <th>País do título</th>
                 <th>Regime de trabalho</th>
-                <th>Instituição de ensino</th>
+                <th>Vínculo IES</th>
                 
                 <th>Ver</th>
                 <th>Alterar</th>
@@ -104,10 +103,9 @@
             <td>{{ docente.pessoa.nacionalidade.nome_pais }}</td>
             <td>{{ docente.titulo_nivel.desc_nivel_graduacao }}</td>
             <td>{{ docente.data_titulacao }}</td>
-            <td></td>
-            <td>{{ docente.titulo_pais_id.nome_pais }}</td>
+            <td>{{ docente.titulo_pais.nome_pais }}</td>
             <td>{{ docente.regime_trabalho.desc_regime_trabalho }}</td>
-            <td>{{ docente.vinculo_ies.desc_vinclulo_ies }}</td>
+            <td>{{ docente.vinculo_ies.desc_vinculo_ies }}</td>
             <td><a href="{% url "docente_view" docente.pessoa.id %}"><span class="label label-info">ver</span></a></td>
             <td><a href="{% url "docente_edit" docente.pessoa.id %}"><span class="label label-warning">alterar</span></a></td>
             <td><a href="{% url "docente_delete" docente.pessoa.id %}"><span class="label label-danger">apagar</span></a></td>
