--- a/sicupira/templates/sicupira/curso_confirm_delete.html
+++ b/sicupira/templates/sicupira/curso_confirm_delete.html
@@ -10,7 +10,7 @@
     <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Apaga Curso</h3>
     <form method="post">{% csrf_token %}
         Voce realmente quer apagar "{{ curso.nome }}" ?<br/>
-        <input type="submit" value="Apagar" class="btn btn-danger" />
+        {% include 'common/delete_button.html' %}
     </form>
 
 {% endblock %}
