--- a/sicupira/templates/sicupira/curso_form.html
+++ b/sicupira/templates/sicupira/curso_form.html
@@ -89,7 +89,9 @@
           {{ form.equivalencia_hora|as_crispy_field }}
         </div>
       </div>
-      <input type="submit" value="Salvar" class="btn btn-primary" />
+ {% include 'common/form_button.html' %}
     </form>
+    <br/>
+   
 </div>
 {% endblock %}
