--- a/sicupira/templates/sicupira/disciplina_form.html
+++ b/sicupira/templates/sicupira/disciplina_form.html
@@ -22,7 +22,7 @@
     <form method="post">
       {% csrf_token %}
       {{ form|crispy }}      
-      <input type="submit" value="Salvar" class="btn btn-primary" />
+      {% include 'common/form_button.html' %}
     </form>
 </div>
 {% endblock %}
