--- a/sicupira/templates/pessoa/docente_form.html
+++ b/sicupira/templates/pessoa/docente_form.html
@@ -6,7 +6,7 @@
     {% if docente.pessoa.id > 0 %}
     <a href="{% url 'docente_edit' discente.pessoa.id %}">Formulário de Docente</a>
     {% else %}
-    <a href="{% url 'docente_new' %}">Formulário de Discente</a>
+    <a href="{% url 'docente_new' %}">Formulário de Docente</a>
     {% endif %}
 
 {% endblock %}
@@ -16,7 +16,7 @@
 {% block content %}
 {% load static %}
 
-<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário de Discente</h3>
+<h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Formulário de Docente</h3>
 
 <div style="width: 90%;margin: auto;">
     <form method="post"  >
