--- a/sicupira/templates/sicupira/enderecoprograma_detail.html
+++ b/sicupira/templates/sicupira/enderecoprograma_detail.html
@@ -21,15 +21,46 @@
     Complemento:  {{ enderecoprograma.complemento }}<br/>
     Bairro:  {{ enderecoprograma.bairro }}<br/>
     Municipio:  {{ enderecoprograma.municipio }}<br/>
-    Fax:  {{ enderecoprograma.fax }}<br/>
-    Telefone:  {{ enderecoprograma.telefone }}<br/>
-    Ramal:  {{ enderecoprograma.ramal }}<br/>
     Email:  {{ enderecoprograma.email }}<br/>
     Web Site:  {{ enderecoprograma.web_site }}<br/>
     Inicio:  {{ enderecoprograma.inicio }}<br/>
     Fim:  {{ enderecoprograma.fim }}<br/>
-    Latitude:  {{ enderecoprograma.latitude }}<br/>
-    Longitude:  {{ enderecoprograma.longitude }}<br/>
+
+    <h3>Telefones</h3>
+    {{ telefoneenderecoprograma_form.management_form }}
+    {{ telefoneenderecoprograma_form.non_form_errors.as_ul }}
+    <table id="formset_{{forloop.counter}}" class="form">
+    {% for form in telefoneenderecoprograma_form.forms %}
+      <!-- <a class="btn btn-info" id="add-item"><i class="fa fa-plus"></i> nova abreviatura</a> -->
+      {% if forloop.first %}
+         <thead>
+            <tr>
+                {% for field in form.visible_fields %}
+            <th style="width:200px">{{ field.label|capfirst }}</th>
+                {% endfor %}
+             </tr>
+         </thead>
+      {% endif %}
+      <tbody>
+          <tr>
+          {% for field in form.visible_fields %}
+            <td>
+            {% if forloop.first %}
+              {% for hidden in form.hidden_fields %}
+              {{ hidden }}
+              {% endfor %}
+            {% endif %}
+              {{ field.errors.as_ul }}
+              {{ field }}
+            </td>
+          {% endfor %}
+          </tr>
+      </tbody>
+    {% endfor %}
+    </table>
+
+
+
     <br/>
     <br/>
     {% include 'common/back_button.html' %}
