abreviatura no detalhe de docente e discente

--- a/sicupira/templates/pessoa/discente_detail.html
+++ b/sicupira/templates/pessoa/discente_detail.html
@@ -16,5 +16,8 @@
     Curso: {{ discente.curso.nome_curso }}<br/>    
     Graduação: {{ discente.nivel.desc_nivel_graduacao }}<br/>    
  <br/>
- {% include 'common/back_button.html' %}
+
+{% include 'common/abreviatura_detail.html' %}
+{% include 'common/back_button.html' %}
+
 {% endblock %}
