--- a/sicupira/templates/common/abreviatura_detail.html
+++ b/sicupira/templates/common/abreviatura_detail.html
@@ -1,4 +1,4 @@
- <table class="form">
+ <table class="form table table-striped">
      <thead>
         <tr>
         <th style="width:200px">Abreviaturas</th>
