--- a/sicupira/templates/pessoa/docente_detail.html
+++ b/sicupira/templates/pessoa/docente_detail.html
@@ -8,14 +8,40 @@
 {% load static %} 
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes do Docente</h3>
-    <h4>Nome: {{docente.pessoa.nome}}</h4>
-    Sexo: {{ docente.pessoa.sexo.desc_sexo }}<br/>
-    Email: {{ docente.pessoa.email }}<br/>
-    Tipo documento: {{ docente.pessoa.tipo_documento.desc_tipo_doc }}<br/>
-    Número documento: {{ docente.pessoa.numero_documento }}<br/>
-    Título: {{ docente.titulo_nivel.desc_nivel_graduacao }}<br/>
-    Vínculo IES : {{ docente.vinculo_ies.desc_vinculo_ies }}<br/>
- <br/>
+    
+    <table class="table table-striped">
+        <thead>
+            <th>Nome:</th>
+            <th>{{docente.pessoa.nome}}</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sexo:</td>
+                <td>{{ docente.pessoa.sexo.desc_sexo }}</td>
+            </tr>
+            <tr>
+                <td>Email:</td>
+                <td>{{ docente.pessoa.email }}</td>
+            </tr>
+            <tr>
+                <td>Tipo documento:</td>
+                <td>{{ docente.pessoa.tipo_documento.desc_tipo_doc }}</td>
+            </tr>
+            <tr>
+                <td>Número documento:</td>
+                <td>{{ docente.pessoa.numero_documento }}</td>
+            </tr>
+            <tr>
+                <td>Título:</td>
+                <td>{{ docente.titulo_nivel.desc_nivel_graduacao }}</td>
+            </tr>
+            <tr>
+                <td>Vínculo IES:</td>
+                <td>{{ docente.vinculo_ies.desc_vinculo_ies }}</td>
+            </tr>
+        </tbody>
+    </table>
+
  {% include 'common/abreviatura_detail.html' %}
  {% include 'common/back_button.html' %}
 
