--- a/sicupira/templates/sicupira/curso_detail.html
+++ b/sicupira/templates/sicupira/curso_detail.html
@@ -1,23 +1,53 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-    {{ block.super }} » <a href="{% url 'curso_view' curso.id %}">Detalhes do curso</a>
+{{ block.super }} » <a href="{% url 'curso_view' curso.id %}">Detalhes do curso</a>
 {% endblock %}
 
 {% block content %}
-{% load static %} 
+{% load static %}
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes do Curso</h3>
-    <h4>Nome: {{curso.nome_curso}}</h4>
-    Programa: {{curso.programa_id.nome_programa}}<br/>
-    Nível: {{curso.nivel_id.desc_nivel_graduacao}}<br/>
-    Situação: {{curso.situacao_id.desc_situacao}}<br/>
-    Créditos Titulação: {{curso.creditos_titulacao}}<br/>
-    Disciplinas: {{curso.disciplina}}<br/>
-    Trabalho de conclusão:  {{curso.trabalho_conclusao}}<br/>
-    Outros: {{curso.outros}}<br/>
-    Equivalência hora: {{curso.equivalencia_hora}}<br/>    
-    <br/>
-    <br/>
-    {% include 'common/back_button.html' %}
+<table class="table table-striped">
+    <thead>
+        <th>Nome:</th>
+        <th>{{curso.nome_curso}}</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Programa:</td>
+            <td>{{curso.programa_id.nome_programa}}</td>
+        </tr>
+        <tr>
+            <td>Nível: </td>
+            <td>{{curso.nivel_id.desc_nivel_graduacao}}</td>
+        </tr>
+        <tr>
+            <td>Situação:</td>
+            <td>{{curso.situacao_id.desc_situacao}}</td>
+        </tr>
+        <tr>
+            <td>Créditos Titulação:</td>
+            <td>{{curso.creditos_titulacao}}</td>
+        </tr>
+        <tr>
+            <td>Disciplinas:</td>
+            <td>{{curso.disciplina}}</td>
+        </tr>
+        <tr>
+            <td>Trabalho de conclusão:</td>
+            <td>{{curso.trabalho_conclusao}}</td>
+        </tr>
+        <tr>
+            <td>Outros:</td>
+            <td>{{curso.outros}}</td>
+        </tr>
+        <tr>
+            <td>Equivalência hora:</td>
+            <td>{{curso.equivalencia_hora}}</td>
+        </tr>
+    </tbody>
+</table>
+
+{% include 'common/back_button.html' %}
 {% endblock %}
