--- a/sicupira/templates/sicupira/disciplina_detail.html
+++ b/sicupira/templates/sicupira/disciplina_detail.html
@@ -1,20 +1,42 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-    {{ block.super }} » <a href="{% url 'diciplina_view' disciplina.id %}">Detalhes da disciplina</a>
+    {{ block.super }} » <a href="{% url 'disciplina_view' disciplina.id %}">Detalhes da disciplina</a>
 {% endblock %}
 
 {% block content %}
 {% load static %} 
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Disciplina</h3>
-    <h4>Nome: {{disciplina.nome_disciplina}}</h4>
-    Sigla: {{ disciplina.sigla }}<br/>    
-    Número: {{ disciplina.numero }}<br/>    
-    Créditos: {{ disciplina.creditos }}<br/>    
-    Ementa: {{ disciplina.ementa }}<br/>    
-    Bibliografia: {{ disciplina.bibliografia }}<br/>    
-    <br/>
-    <br/>
+    
+    <table class="table table-striped">
+        <thead>
+            <th>Nome:</th>
+            <th>{{disciplina.nome_disciplina}}</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Sigla:</td>
+                <td>{{ disciplina.sigla }}</td>
+            </tr>
+            <tr>
+                <td>Número:</td>
+                <td>{{ disciplina.numero }}</td>
+            </tr>
+            <tr>
+                <td>Créditos:</td>
+                <td>{{ disciplina.creditos }}</td>
+            </tr>
+            <tr>
+                <td>Ementa:</td>
+                <td>{{ disciplina.ementa }}</td>
+            </tr>
+            <tr>
+                <td>Bibliografia</td>
+                <td>{{ disciplina.bibliografia }}</td>
+            </tr>
+        </tbody>
+    </table>
+    
     {% include 'common/back_button.html' %}
 {% endblock %}
