--- a/sicupira/templates/sicupira/linhapesquisa_detail.html
+++ b/sicupira/templates/sicupira/linhapesquisa_detail.html
@@ -8,13 +8,35 @@
 {% load static %} 
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Linha de Pesquisa</h3>
-    <h4>Nome: {{linhapesquisa.nome_linha_pesquisa}}</h4>
-    Código do Programa: {{ linhapesquisa.area_concentracao_id.programa_id.codigo_programa }}<br/>    
-    Programa: {{ linhapesquisa.area_concentracao_id.programa_id.nome_programa }}<br/>    
-    Área de Concentração: {{ linhapesquisa.area_concentracao_id }}<br/>    
-    Data de Início: {{ linhapesquisa.data_inicio }}<br/> 
-    Data de Fim: {{ linhapesquisa.data_fim }}<br/>
-    <br/>
-    <br/>
+    
+    <table class="table table-striped">
+        <thead>
+            <th>Nome:</th>
+            <th>{{linhapesquisa.nome_linha_pesquisa}}</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Código do Programa: </td>
+                <td>{{ linhapesquisa.area_concentracao_id.programa_id.codigo_programa }}</td>
+            </tr>
+            <tr>
+                <td>Programa:</td>
+                <td>{{ linhapesquisa.area_concentracao_id.programa_id.nome_programa }}</td>
+            </tr>
+            <tr>
+                <td>Área de Concentração: </td>
+                <td>{{ linhapesquisa.area_concentracao_id }}</td>
+            </tr>
+            <tr>
+                <td>Data de Início:</td>
+                <td>{{ linhapesquisa.data_inicio }}</td>
+            </tr>
+            <tr>
+                <td>Data de Fim:</td>
+                <td>{{ linhapesquisa.data_fim }}</td>
+            </tr>
+        </tbody>
+    </table>
+    
     {% include 'common/back_button.html' %}
 {% endblock %}
