--- a/sicupira/templates/sicupira/programa_detail.html
+++ b/sicupira/templates/sicupira/programa_detail.html
@@ -1,29 +1,77 @@
 {% extends 'sicupira/base.html' %}
 
 {% block breadcrumbs %}
-    {{ block.super }} » <a href="{% url 'programa_view' programa.id %}">Detalhes do programa</a>
+{{ block.super }} » <a href="{% url 'programa_view' programa.id %}">Detalhes do programa</a>
 {% endblock %}
 
 {% block content %}
-{% load static %} 
+{% load static %}
 
 <h3> <img src="{% static "images\logo.png" %}" alt="My image" style="height: 70px;"> Detalhes da Programa</h3>
-    <h4>Nome: {{ programa.nome_programa}}</h4>
-    Código Programa: {{ programa.codigo_programa }}<br/>    
-    Instituição: {{ programa.instituicao.nome }}<br/>    
-    Nome Inglês: {{ programa.nome_ingles }}<br/>    
-    Nota: {{ programa.nota }}<br/>    
-    Flag Cooperação: {{ programa.flg_cooperacao }}<br/>    
-    Flag rede: {{ programa.flg_rede }}<br/>    
-    Modalidade: {{ programa.modalidade_id }}<br/>        
-    Area Avaliação: {{ programa.area_avaliacao.area_avaliacao }}<br/>        
-    Area Básica: {{ programa.area_basica.desc_area_basica }}<br/>        
-    Regime Letivo: {{ programa.regime_letivo_id }}<br/>    
-    Estado: {{ programa.estado_id }}<br/>    
-    Região: {{ programa.regiao_id }}<br/>    
-    Situação: {{ programa.situacao_id }}<br/>    
-    Linha de Pesquisa: {{ programa.linha_pesquisa_id }}<br/>    
-    <br/>
-    <br/>
-    {% include 'common/back_button.html' %}      
+
+
+<table class="table table-striped">
+    <thead>
+        <th>Nome:</th>
+        <th>{{ programa.nome_programa}}</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Código Programa:</td>
+            <td>{{ programa.codigo_programa }}</td>
+        </tr>
+        <tr>
+            <td>Instituição:</td>
+            <td>{{ programa.instituicao.nome }}</td>
+        </tr>
+        <tr>
+            <td>Nome Inglês:</td>
+            <td>{{ programa.nome_ingles }}</td>
+        </tr>
+        <tr>
+            <td>Nota:</td>
+            <td>{{ programa.nota }}</td>
+        </tr>
+        <tr>
+            <td>Flag Cooperação:</td>
+            <td>{{ programa.flg_cooperacao }}</td>
+        </tr>
+        <tr>
+            <td>Flag rede:</td>
+            <td>{{ programa.flg_rede }}</td>
+        </tr>
+        <tr>
+            <td>Modalidade:</td>
+            <td>{{ programa.modalidade_id }}</td>
+        </tr>
+        <tr>
+            <td>Area Avaliação:</td>
+            <td>{{ programa.area_avaliacao.area_avaliacao }}</td>
+        </tr>
+        <tr>
+            <td>Area Básica:</td>
+            <td>{{ programa.area_basica.desc_area_basica }}</td>
+        </tr>
+        <tr>
+            <td>Regime Letivo:</td>
+            <td>{{ programa.regime_letivo_id }}</td>
+        </tr>
+        <tr>
+            <td>Estado:</td>
+            <td>{{ programa.estado_id }}</td>
+        </tr>
+        <tr>
+            <td>Região:</td>
+            <td>{{ programa.regiao_id }}</td>
+        </tr>
+        <tr>
+            <td>Situação:</td>
+            <td>{{ programa.situacao_id }}</td>
+        </tr>
+    </tbody>
+</table>
+
+
+
+{% include 'common/back_button.html' %}
 {% endblock %}
